Fixed menu on mobile, so that it shows above all other content.

--- a/styles/style.css
+++ b/styles/style.css
@@ -159,6 +159,7 @@ body {
     margin-inline: auto;
     width: 100%;
     height: 100vh;
+    padding-bottom: 2rem;
     color: white;
     font-size: 1.5rem;
     font-weight: 600;
@@ -166,6 +167,7 @@ body {
     transform: translateX(100%);
     transition: transform .5s ease-in-out;
     background-color: rgb(10, 165, 204);
+    z-index: 1;
     /* X-AKSE (vannrett), Y-AKSE (loddrett), BLUR, evt nr. 4 = SPREAD */
 }
 
@@ -206,10 +208,9 @@ body {
 .content-section__login-status {
     display: flex;
     justify-content: flex-end;
-    margin: 1rem;
+    margin: 1rem 2rem;
     font-family: roboto;
 }
-
 
 /* ARTICLE NUMBER 1 */
 .intro__booking {
@@ -612,6 +613,7 @@ a {
         display: flex;
         width: 100%;
         height: auto;
+        padding-bottom: 0;
         background-color: rgb(255, 255, 255);
         color: rgb(19, 19, 19);
     }
